--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,12 @@
+##############################################################
+# PERSONAL Exclude 
+##############################################################
+
+.vscode/
+
+##############################################################
+# NODE Exclude 
+##############################################################
 # Logs
 logs
 *.log
@@ -59,3 +68,4 @@ typings/
 
 # next.js build output
 .next
+
