--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,10 @@
 # PERSONAL Exclude 
 ##############################################################
 
+#webpack
+dist/
+
+#vscode
 .vscode/
 
 ##############################################################
