--- a/package.json
+++ b/package.json
@@ -8,7 +8,11 @@
     "express": "4.16.3"
   },
   "devDependencies": {
-    "winston": "2.4.2"
+    "clean-webpack-plugin": "^0.1.19",
+    "html-webpack-plugin": "^3.1.0",
+    "winston": "2.4.2",
+    "webpack": "^4.10.0",
+    "webpack-cli": "^3.0.1"
   },
   "repository": {
     "type": "git",
@@ -16,7 +20,9 @@
   },
   "license": "Beerware",
   "scripts": {
-    "dev": "NODE_ENV=development node app.js",
+    "legacy:dev": "NODE_ENV=development node app.js",
+    "legacy:prod": "NODE_ENV=production node app.js",
+    "dev": "webpack --mode=development",
     "prod": "NODE_ENV=production node app.js",
     "start": "node app.js"
   },
